--- a/nginx-nlp/index.html
+++ b/nginx-nlp/index.html
@@ -1,7 +1,7 @@
 <html>
 <head><title>Nginx para NLP</title></head>
 <body><h1>Nginx en K8s para NLP</h1> 
-<h2>NLP</h2>
-Versi&oacute;n 1.1
+<h1>Versi&oacute;n 1.0</h1>
+<img src="rai_perfil.png" alt="Gato guay">
 </body>
 </html>
